Attempt to fix maze not showing up in safari

--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,12 @@ p {
     background: black;
     margin-left: auto;
     margin-right: auto;
+    display: -webkit-box; /* Flex for all browsers */
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
 }
 
 div.maze-row {
